# Prog1_SDL2

./: .gitignore  CMakeLists.txt  bootstrap.py  main.c  mingw.bat  msvc.bat  unix.bash  unix.sh
cmake/: copy_dlls.cmake
